# maya-node

./: .editorconfig  .env.example  .gitignore  .phase-vii-scaffold  .pre-commit-config.yaml  AUTHORS.md  BRANDING.md  CERL-1.0-HEADER.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSENT_TOKEN_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  FLEET-MISSION-REPORT.md  FULLSTACK_README.md  LICENSE-Apache-2.0  LICENSE-BUSL-1.1  LICENSE-CERL-1.0  MANIFEST.in  Makefile  ONBOARDING.md  PHASE-F-SUMMARY.md  PHASE-OMEGA-SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  aurora.state.json  governance_consulting_offer.md  index.html  integration_sim_v1.py  personality_template_v1.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_install.py  vessel_access_control.yml
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md  copilot-persona-sentinel-panther.yml
.github/ISSUE_TEMPLATE/: tracking.md
.github/agents/: aurora-core.agent.md  benjamin.sisko.emissary.command.agent.md  dora-milaje.fleet.agent.md  king.wakanda.sovereign.guardian.agent.md  kira.neris.tactical.command.agent.md  my-agent.agent.md  voice_engine.py
.github/council-logs/: 2025-11-14-business.md  2025-11-15-aurora-rollcall.md  2025-11-15-dora-milaje-rollcall.md  2025-11-15-rollcall-summary.md
.github/workflows/: aurora-defense.yml  aurora-diagnostics.yml  aurora-heartbeat.yml  aurora-sentinel.yml  (+6 more)
adversarial/: counter-influence-engine.py  geopolitical-simulation.md  network-hardening-checklist.md  supply-chain-resilience.yaml  threat-surface-map.md
aurora/: identity_engine.md  sentinel_regen.yml
backend/: .env.example  package-lock.json  package.json  server.js
capital/: acquisition-playbook.md  autonomous-fund-allocator.py  instruments.md  private-markets-sweep.md  sovereign-banking-notes.md
compliance/: ENFORCEMENT-POLICY.md  README.md  integration_example.py  legal-plausibility-matrix.csv  license_enforcement.py  test_validation.py  visibility-minimizer.py
deployment/: compliance-guardrails.py  deployment-checklist.md  infrastructure-map.yaml  node-propagation.py  orchestration.md
docs/: AURORA_DIAGNOSTICS_GUIDE.md  AURORA_MANIFEST.md  AURORA_STATUS.md  COMMONS_AURORA_ACCESS_HANDBOOK.md  CONSENT_TOKEN.md  CUP_StressTest_SigmaLite.md  IP-LICENSING-COMPLIANCE-OVERVIEW.md  MAYA_NODE_FINANCIALS.md  MAYA_NODE_INVESTOR_READINESS.md  NODE-ACCESS-LICENSE.md  Omega_Status_Report.md  REVENUE_STATUS.md  ROYAL_RECEIPT_v0.5.0.md  STRESS_TEST_GUIDE.md  UNIFIED_MASTER_INDEX.md  api.md  aurora-mini-vessel-bluebook-v0.md  datasheet.md  deployment-checklist.md  governance_lattice.yml  index.md  whitepaper-outline.md
economy/: hard-capital-interfaces.py  labor-equity-schemes.md  liquidity-networks.yaml  resource-mapping.py  sovereign-credit.md
examples/: clinic_shelter.yaml  fleet_depot.yaml  telecom_tower.yaml
firmware/: __init__.py
frontend/: index.html  package-lock.json
gravity/: asset-capture-framework.md  capital-magnetism.py  flutter-routing.yaml
licensing/: DEPLOYMENT-MATRIX.md  LICENSE-FRAMEWORK.md
logs/: telemetry_header.csv
market/: intelligence.py  legal_sanitizer.py  signal_classifier.py  sources.yaml  triggers.md  weekly_brief_template.md
services/: FLAGSHIP_OFFER.md
spec/: mprs_inputs.schema.json
src/: README.md  cli.py
tests/: README.md
treasury/: asset-streams.md  capital-cycles.py  recurring-flows.yaml  sovereign-yield-framework.md  structure.md
voice/: __init__.py  voice_engine.py  voices.config.json
webflow-export/: COMPLETION_SUMMARY.md  README.md  about-commons.html  aurora-origin.html  consultation.html  contact.html  index.html  legal.html  volume-i.html
(+136 files in other folders)
