# SPDX-License-Identifier: CERL-1.0
# Copyright (c) 2025 MAYA Node Contributors
#
# Constrained Ethics Runtime License 1.0
# This code is licensed under CERL-1.0. See LICENSE-CERL-1.0 for full terms.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maya-node"
version = "0.5.0"
description = "Sovereign AI infrastructure with ethical constraints and transparent decision-making"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "CERL-1.0"}
authors = [
    {name = "MAYA Node Contributors"},
]
keywords = ["ai", "ethics", "sovereign", "cerl", "distributed", "transparency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "coverage>=7.3.0,<8.0.0",
    "bandit>=1.7.5,<2.0.0",
    "safety>=2.3.0,<3.0.0",
    "pylint>=3.0.0,<4.0.0",
    "flake8>=6.1.0,<7.0.0",
    "black>=23.11.0,<24.0.0",
    "mypy>=1.7.0,<2.0.0",
    "isort>=5.12.0,<6.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "ipython>=8.17.0,<9.0.0",
    "ipdb>=0.13.13,<1.0.0",
]

docs = [
    "sphinx>=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/maya-node"
Documentation = "https://github.com/yourusername/maya-node/tree/main/docs"
Repository = "https://github.com/yourusername/maya-node"
Issues = "https://github.com/yourusername/maya-node/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.venv
  | \\.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.main]
fail-under = 8.0
ignore = ["tests", "docs"]
recursive = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
